[gd_scene load_steps=21 format=3 uid="uid://crwnft8v8dvsj"]

[ext_resource type="Script" path="res://scenes/GameManager.gd" id="1_0slgj"]
[ext_resource type="PackedScene" uid="uid://d0h5muxoolv71" path="res://scenes/radio/radio.tscn" id="1_d27hc"]
[ext_resource type="PackedScene" uid="uid://p5ycvdxuja3y" path="res://scenes/angerbar/anger_bar.tscn" id="2_1qn1o"]
[ext_resource type="Texture2D" uid="uid://bd04q03q7luvn" path="res://assets/textures/vintage_paper_texture_bw.jpg" id="3_tsyo0"]
[ext_resource type="Shader" path="res://scenes/screen_texture.gdshader" id="6_5grl7"]
[ext_resource type="AudioStream" uid="uid://dumu15y0ows8y" path="res://assets/audio/airtone - bluenotes.mp3" id="6_xpw7x"]
[ext_resource type="AudioStream" uid="uid://dpx17cvs74d4l" path="res://assets/audio/airtone - spacedust.mp3" id="7_7352e"]
[ext_resource type="Texture2D" uid="uid://bj33v5inqhcvh" path="res://assets/textures/vintage_paper_texture.jpg" id="7_v813i"]
[ext_resource type="AudioStream" uid="uid://bgja34f4ftvmv" path="res://assets/audio/zep_hurme - Traveling_Lights.mp3" id="8_22cxp"]
[ext_resource type="AudioStream" uid="uid://b4iekw13o7xu6" path="res://assets/audio/mindmapthat_-_Where_the_Moon_Shines_Bright_1.mp3" id="9_774j3"]
[ext_resource type="AudioStream" uid="uid://cu75f5lsyh54j" path="res://assets/audio/Old Radio tuning.mp3" id="9_d7nuq"]
[ext_resource type="AudioStream" uid="uid://bl4qly1hnv5h0" path="res://assets/audio/cuajitoben_-_En_Shenandoah.mp3" id="10_gjtsc"]
[ext_resource type="Texture2D" uid="uid://bqt54a204ql7p" path="res://scenes/game/Squirrel_Close_Arm.png" id="13_56p7y"]
[ext_resource type="AudioStream" uid="uid://bn4ij5tbysh1e" path="res://assets/audio/radio_click.mp3" id="13_c3shx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tq57a"]
shader = ExtResource("6_5grl7")
shader_parameter/alpha = 0.3
shader_parameter/brightness = 0.5
shader_parameter/contrast = 0.5
shader_parameter/grayscale = false
shader_parameter/saturation = 0.5
shader_parameter/screenTexture = ExtResource("3_tsyo0")

[sub_resource type="Animation" id="Animation_nnkwh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(323, 767)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arm:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.830419]
}

[sub_resource type="Animation" id="Animation_nqfs6"]
resource_name = "Squirrel Play"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arm:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(270, 767), Vector2(231, 602), Vector2(270, 767)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arm:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.830419, 0.511623, 0.830419]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"stop"
}]
}

[sub_resource type="Animation" id="Animation_ps27r"]
resource_name = "Squirrel Quit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arm:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(407, 767), Vector2(367, 606), Vector2(407, 767)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arm:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.830419, 0.511623, 0.830419]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"stop"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Quit"
}]
}

[sub_resource type="Animation" id="Animation_1hb3r"]
resource_name = "Squirrel Stop"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arm:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(323, 767), Vector2(302, 604), Vector2(323, 767)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arm:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.830419, 0.511623, 0.830419]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"stop"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tl6ih"]
_data = {
"RESET": SubResource("Animation_nnkwh"),
"Squirrel Play": SubResource("Animation_nqfs6"),
"Squirrel Quit": SubResource("Animation_ps27r"),
"Squirrel Stop": SubResource("Animation_1hb3r")
}

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0slgj")
metadata/_edit_horizontal_guides_ = [72.0, 649.0, 112.0]
metadata/_edit_vertical_guides_ = [128.0, 1152.0, 1024.0, 896.0, 209.0]

[node name="BG_COLOR" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.968627, 0.627451, 0.447059, 1)

[node name="TextureRect" type="TextureRect" parent="BG_COLOR"]
material = SubResource("ShaderMaterial_tq57a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_v813i")
ignore_texture_size = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 72
theme_override_constants/margin_right = 106
theme_override_constants/margin_bottom = 72

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
offset_left = 128.0
offset_top = 72.0
offset_right = 1174.0
offset_bottom = 652.0
theme_override_constants/separation = 128

[node name="Radio" parent="MarginContainer/HBoxContainer" node_paths=PackedStringArray("RadioEffect", "Music") instance=ExtResource("1_d27hc")]
offset_right = 768.0
offset_bottom = 580.0
RadioEffect = NodePath("../../../RadioEffect")
Music = NodePath("../../../Music")
Songs = {
"Down With Ben - En Shenandoah": ExtResource("10_gjtsc"),
"Kara Square - Where the Moon Shines Bright": ExtResource("9_774j3"),
"Zep Hurme - Traveling Lights": ExtResource("8_22cxp"),
"airtone - bluenotes": ExtResource("6_xpw7x"),
"airtone - spacedust": ExtResource("7_7352e")
}
AngerBarPath = NodePath("../AngerBar")

[node name="AngerBar" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_1qn1o")]
offset_left = 896.0
offset_right = 1024.0
offset_bottom = 580.0

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="RadioEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_d7nuq")

[node name="RadioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_c3shx")

[node name="Arm" type="TextureRect" parent="."]
offset_left = 323.0
offset_top = 767.0
offset_right = 529.0
offset_bottom = 1074.0
rotation = 0.830419
pivot_offset = Vector2(180, 280)
texture = ExtResource("13_56p7y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tl6ih")
}

[connection signal="game_played" from="MarginContainer/HBoxContainer/Radio" to="." method="_on_radio_game_played"]
[connection signal="game_stopped" from="MarginContainer/HBoxContainer/Radio" to="." method="_on_radio_game_stopped"]
